--- a/analog/mlquant.tex
+++ b/analog/mlquant.tex
@@ -46,7 +46,7 @@ Consider a uniform quantiser with $s$ discrete levels applied to the interval $[
 \begin{equation}
 r_i = a + \frac{b-a}{s}(i+0.5), \quad i=0,1,...,s-1
 \end{equation}
-It can be seen that each step is $\frac{b-a}{s}$ from the next.  The quantisation error will be uniformly distributed over the interval $[-\frac{(b-a)}{2s},+\frac{(b-a)}{2s}]$. For the 
+It can be seen that each level is $\frac{b-a}{s}$ from the next.  The quantisation error for any input $x$ will be uniformly distributed over the interval $[-\frac{(b-a)}{2s},+\frac{(b-a)}{2s}]$.  For the 
 $tanh()$ function the interval $[a,b]=[-1,+1]$, and the quantisation error will be distributed over $[-\frac{1}{s}, + \frac{1}{s}]$.  Table \ref{tab:uniform quantiser} has some examples.
 
 The variance of the noise from a uniform distribution over the interval $[c,d]$ is given by:
@@ -64,22 +64,21 @@ We note that when vector quantising the noise is likely to be Gaussian.
 \centering
 \begin{tabular}{l l l l}
 \hline
-Bits & Level & Reconstruction Levels & Quant Error Interval \\
+Bits & Levels & Reconstruction Levels & Quant Error \\
 \hline
 1 & 2 & $[-0.5,+0.5]$ & $[-0.5,+0.5]$  \\
 2 & 4 & $[-0.75, -0.25, +0.25, +0.75]$ & $[-0.125,+0.125]$ \\
 \hline
 \end{tabular}
-\caption{Uniform Quantiser Examples}
+\caption{Uniform Quantiser Examples.  The quantisation error is for any input value $x$ inside the outermost levels, i.e. $r_0 \le x \le r_{s-1}$.}
 \end{table}
 
 The process used to train a VQ is:
 \begin{enumerate}
 \item The autoencoder is trained with Gaussian noise.
-\item the networkj is then run in inference mode without quantisation noise and the latent bottleneck vectors saved to a file.
-\item An attempt is made to train a VQ that has a residual quantisation error $\simga_2$.
+\item the network is then run in inference mode without quantisation noise and the latent bottleneck vectors saved to a file.
+\item An attempt is made to train a VQ that has a residual quantisation error $\sigma_2$.
 \end{enumerate}
-
 
 \begin{enumerate}
 \item Need a meaningful way of interpreting the weighted loss as a comparable objective measure.  It should converge to a similar result as MSE, but favour different parts of the spectrum - change the distribution of the noise. Perhaps just report regular SD in parallel.
@@ -88,7 +87,7 @@ The process used to train a VQ is:
 \item an alternative to injecting noise is quantising to a nearest reconstruction level.  Good check.  However what does gradient look like?  Check again how additive noise is OK wrt to gradient. 
 \item To cross check substitute FVQ functions (coded so they don't blow up due to size)
 \item A better network would perform more exotic transformations, organise a suitable transformation.
-\item Useful to try a VQ at the bottleneck, kmeans and VQVAE trained, see how the information is organised.  Will training the VQ based on the MSE of the latent space be meaningful? I guess it depends on how latent space is organised.  So - very good idea to train a VQ against minimising MSE of this latent space.
+\item Useful to try a VQ at the bottleneck, kmeans and VQVAE trained, see how the information is organised.  Will training the VQ based on the MSE of the latent space be meaningful?  I guess it depends on how latent space is organised.  So - very good idea to train a VQ against minimising MSE of this latent space.
 \item We can think of hybrid approaches, e.g. search latent space of output - analysis by synthesis I guess.  Use that to obtain centroids etc.  Fix NN while VQ search is in progress.  I guess that leads us back to the VQ In the loop.
 \item If we replace uniform with gaussian noise - can consider directly modulated symbols.  Need to work out SNR.
 \end{enumerate}
