--- a/analog/mlquant.tex
+++ b/analog/mlquant.tex
@@ -2,6 +2,8 @@
 \usepackage{amsmath}
 \usepackage{hyperref}
 \usepackage{tikz}
+\usepackage{siunitx}
+
 \begin{document}
 
 \title{ML quantisation of Vocoder Features}
@@ -38,7 +40,7 @@ Where to these fit in:
 
 \section{Experiment 1}
 
-A simple autoencoder network was designed consisting of 4 FC layers with a $tanh()$ non-linearity at the bottleneck.  The training material was dimension $k=20$ smoothed, unit energy, mel spaced log vectors $\mathbf{b}$.  Only one $\mathbf{b}$ vector was considered at a time (no time based transformations). A dimension $d=10$ bottleneck was sufficient to maintain less than $1 dB^2$ distortion, indicating a useful dimension reduction.  Good results (based on visual inspection) were also obtained using a weighted linear loss function.
+A simple autoencoder network was designed consisting of 4 FC layers with a $tanh()$ non-linearity at the bottleneck.  The training material was dimension $k=20$ smoothed, unit energy, mel spaced log vectors $\mathbf{b}$.  Only one $\mathbf{b}$ vector was considered at a time (no time based transformations). When trained with a SD los function \ref{eq:sd_loss} a dimension $d=10$ bottleneck was sufficient to maintain less than $1 dB^2$ distortion, indicating a useful dimension reduction.  Good results (based on visual inspection) were also obtained using a weighted linear loss function \ref{eq:wl_loss}.
 
 However it was unclear if the latent space was suitable for quantisation. To investigate this, a small amount of noise was added to simulate the effect of uniform quantisation over the $[-1,1]$ dynamic range of the $tanh$ function placed at the bottleneck.  This noise also encourages the network to converge on a latent space that behaves well in the presence of small quantisation errors.
 
@@ -47,7 +49,7 @@ Consider a uniform quantiser with $s$ discrete levels applied to the interval $[
 r_i = a + \frac{b-a}{s}(i+0.5), \quad i=0,1,...,s-1
 \end{equation}
 It can be seen that each level is $\frac{b-a}{s}$ from the next.  The quantisation error for any input $x$ will be uniformly distributed over the interval $[-\frac{(b-a)}{2s},+\frac{(b-a)}{2s}]$.  For the 
-$tanh()$ function the interval $[a,b]=[-1,+1]$, and the quantisation error will be distributed over $[-\frac{1}{s}, + \frac{1}{s}]$.  Table \ref{tab:uniform quantiser} has some examples.
+$tanh()$ function the interval $[a,b]=[-1,+1]$, and the quantisation error will be distributed over $[-\frac{1}{s}, + \frac{1}{s}]$. 
 
 The variance of the noise from a uniform distribution over the interval $[c,d]$ is given by:
 \begin{equation}
@@ -57,17 +59,21 @@ The variance of our quantisation noise is therefore:
 \begin{equation}
 \sigma^2 = \frac{1}{3s^2}
 \end{equation}
-We note that when vector quantising the noise is likely to be Gaussian.
+
+Table \ref{tab:uniform quantiser} presents uniform quantisers for a range of step sizes.  This gives us a baseline to compare more sophisticated quantisation techniques.  For example a 5 bit $s=32$ step uniform quantiser and $d=10$ bottleneck would require 50 bits/frame for $\sigma=0.018$ distortion. We hope to improve on that that with vector quantisation (VQ). We note that when vector quantising the noise distribution is likely to be Gaussian rather than uniform, but argue that the uniform quantiser analysis gives us a reasonable starting target for quantiser performance.
 
 \begin{table}
 \label{tab:uniform quantiser}
 \centering
-\begin{tabular}{l l l l}
+\begin{tabular}{l l l l l l}
 \hline
-Bits & Levels & Reconstruction Levels & Quant Error \\
+Bits & Levels & Reconstruction Levels & Quant Error & $\sigma^2$ & $\sigma$ \\
 \hline
-1 & 2 & $[-0.5,+0.5]$ & $[-0.5,+0.5]$  \\
-2 & 4 & $[-0.75, -0.25, +0.25, +0.75]$ & $[-0.125,+0.125]$ \\
+1 & 2  & $[-0.5,+0.5]$                 & $[-0.5,+0.5]$          & 0.0833 & 0.289 \\
+2 & 4  & $[-0.75, -0.25, ...]$         & $[-0.25,+0.25]$        & 0.0208 & 0.144 \\
+3 & 8  & $[-0.875, -0.625 ...]$        & $[-0.125,+0.125]$      & 0.0052 & 0.072 \\
+4 & 16 & $[-0.9375,-0.8125 ...]$       & $[-0.0625,+0.0625]$    & 0.0013 & 0.036 \\
+5 & 32 & $[-0.96875, -0.90625, ... ]$  & $[-0.03125,+0.03125]$  & 0.0003 & 0.018 \\
 \hline
 \end{tabular}
 \caption{Uniform Quantiser Examples.  The quantisation error is for any input value $x$ inside the outermost levels, i.e. $r_0 \le x \le r_{s-1}$.}
@@ -75,10 +81,45 @@ Bits & Levels & Reconstruction Levels & Quant Error \\
 
 The process used to train a VQ is:
 \begin{enumerate}
-\item The autoencoder is trained with Gaussian noise.
-\item the network is then run in inference mode without quantisation noise and the latent bottleneck vectors saved to a file.
-\item An attempt is made to train a VQ that has a residual quantisation error $\sigma_2$.
+\item The autoencoder network is trained with Gaussian noise.
+\item The network is then run in inference mode without quantisation noise and the latent bottleneck vectors saved to a file.
+\item An attempt is made to train a VQ using \emph{kmeans} that has a residual quantisation error $\sigma$.
 \end{enumerate}
+
+\subsection{Results}
+
+The autoencoder was trained with $\sigma^2=1E-3$ gaussian noise over 100 epochs, using the weighted linear loss function \ref{eq:wl_loss} and normalised $K=20$ target vectors.  The network was then run in inference mode, and the results for various amounts of noise at the bottleneck measured (Table \ref{tab:nn4_inference}).  Note that although the network was trained using a weighted linear loss function, inference performance was measured using the SD loss function.
+
+\begin{table}
+\label{tab:nn4_inference}
+\centering
+\begin{tabular}{l l l l l}
+\hline
+$\sigma^2$ & $\sigma$ & SD $dB^2$ & VQ bits & bits/s \\
+\hline
+0.000 & 0.000 & 1.56 & n/a & n/a \\
+0.001 & 0.031 & 1.88 & 33 & 1650 \\
+0.003 & 0.055 & 2.52 & 18 & 900 \\
+0.010 & 0.100 & 4.80 & 10 & 450 \\
+\hline
+\end{tabular}
+\caption{SD and multi-stage VQ bits for various levels of Gaussian bottleneck noise.  The bit rate assumes the vectors are sent every 20ms (sufficient for communications quality speech). }
+\end{table}
+
+With $\sigma^2=0$, the network was run again and the bottleneck (latent) vectors stored to a file.
+
+A PCA was performed on the latent vectors using GNU Octave.  The PCA results showed significant linear correlation still exists in the bottleneck vectors, which suggests:
+\begin{enumerate}
+\item This autoencoder is non-optimal.  An idea bottleneck dataset would have no measurable linear correlation between elements.  
+\item PCA can be a useful tool for measuring autoencoder performance (at least for linear dependencies).
+\item With an improved network, a narrower bottleneck dimension $d$ should be possible.  This will improve multistage VQ performance, which is difficult when $d$ is large as the residual error vectors tend towards independent Gaussians with no correlation the VQ can exploit.
+\end{enumerate}
+
+A mesh plot was made of a segment of the latent vectors.  This clearly showed significant time correlation between the same elements in adjacent vectors.  A better autoencoder could exploit this time correlation, and jointly quantise adjacent vectors leading to a lower quantisation bit rate.
+
+A multistage vector quantiser (each stage with 12 bits or 4096 vectors) was trained using the latent vectors as training material.  The number of bits required to achieve the same variance as the intentionally injected noise is presented in \ref{tab:uniform quantiser}.
+
+\subsection {WIP Todos}
 
 \begin{enumerate}
 \item Need a meaningful way of interpreting the weighted loss as a comparable objective measure.  It should converge to a similar result as MSE, but favour different parts of the spectrum - change the distribution of the noise. Perhaps just report regular SD in parallel.
@@ -91,4 +132,49 @@ The process used to train a VQ is:
 \item We can think of hybrid approaches, e.g. search latent space of output - analysis by synthesis I guess.  Use that to obtain centroids etc.  Fix NN while VQ search is in progress.  I guess that leads us back to the VQ In the loop.
 \item If we replace uniform with gaussian noise - can consider directly modulated symbols.  Need to work out SNR.
 \end{enumerate}
+
+\subsection{Weighted Linear Loss Function}
+
+From the manifold work (TODO Ref), we have employed a weighted linear loss function:
+\begin{equation}
+\label{eq:wl_loss}
+L = \frac{1}{K}\sum_{k=0}^{K-1}|(x_k-\hat{x}_k)W(k)|^2
+\end{equation}
+where $x_k$ are the linear spectral envelope samples. As this function operates in the linear domain, high energy parts of the spectrum (such as formants) will be preferentially optimised. However we also wish to pay some attention to other parts of the spectrum. $W(k)$ is a weighting function that reduces the contribution of spectral peaks (while still maintaining a reasonable match to formant energy), and increases the contribution of spectral valleys.
+The input features to the ML system are expressed in dB:
+\begin{equation}
+\begin{split}
+X_k &= 20log_{10}x_k \\
+x_k &= 10^{X_k/20}
+\end{split}
+\end{equation}
+However to reduce dynamic range in the network $X_k$ are scaled:
+\begin{equation}
+Y_k = log_{10}x_k = X_k/20
+\end{equation}
+The loss function used for training is:
+\begin{equation}
+L = \frac{1}{K}\sum_{k=0}^{K-1} | ( 10^{Y_k} - 10^{\hat{Y}_k} )W(k)|^2
+\end{equation}
+Which can be shown to be the same as (\ref{eq:wl_loss}):
+\begin{equation}
+\begin{split}
+L &= \frac{1}{K}\sum_{k=0}^{K-1}|(10^{X_k/20} - 10^{\hat{X}_k/20})W(k)|^2 \\
+  &= \frac{1}{K}\sum_{k=0}^{K-1}|(x_k - \hat{x}_k)W(k)|^2
+\end{split}
+\end{equation}
+Unlike loss functions such as Spectral Distortion (SD):
+\begin{equation}
+\label{eq:sd_loss}
+SD = \frac{1}{K}\sum_{k=0}^{K-1}|(X_k - \hat{X}_k)|^2
+\end{equation}
+which can be expressed in $dB^2$, the units of the loss function $L$ are difficult to interpret.  It can be observed that L is the mean square error energy, with which has been re-distributed (shaped) by the weighting function $W(k)$. 
+
+This section WIP. Todos:
+\begin{enumerate}
+\item Include normalisation of energy $\sum_k |x_k|^2 = 1$, I think this makes $L_{max} \le 1$.
+\item Weighting function reduces peaks, which would make $L_{max}<1$
+\item See if we can find a reason for the factor of 400 currently used in code.
+\end{enumerate}
+
 \end{document}
